Added content and CSS

--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Discover Hidden Places...</title>
-    <link href="style.css" type="text/css" rel="stylesheet"
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
       <h1>Discover hidden places in the world around you</h1>
       <a href="">Download Excursion (Coming Soon!)</a>
-  </body>
+<!-- the video will go here
+      <p><video autoplay>
+        <source src="excursion.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video></p> -->
+      <h1>Your personal travel guide</h1>
+      <h2>Excursion remembers places you like, and recommends new points of
+      interest around you.</h2>
+      <img src="resources/images/camp.jpg" type="image/jpg">
+      <p><img src="resources/images/phone.png" type="image/png"></p>
+      <h1>Coming soon for iPhone</h1>
+      <a href="">Download Excursion (Coming Soon!)</a>
 </html>
