--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <body>
       <h1>Discover hidden places in the world around you</h1>
       <a href="">Download Excursion (Coming Soon!)</a>
-<!-- the video will go here
-      <p><video autoplay>
-        <source src="excursion.mp4" type="video/mp4">
+      <p><video autoplay loop>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video></p> -->
       <h1>Your personal travel guide</h1>
