--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+      <div id="header">
       <h1>Discover hidden places in the world around you</h1>
+  </div>
       <a href="">Download Excursion (Coming Soon!)</a>
       <p><video autoplay loop>
         <source src="resources/videos/excursion.mp4" type="video/mp4">
