Actually done now, ft footer

--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
   </head>
   <body>
       <div id="header">
-      <h1>Discover hidden places in the world around you</h1>
-  </div>
-      <a href="">Download Excursion (Coming Soon!)</a>
-      <p><video autoplay loop>
+        <h1>Discover hidden places in the world around you</h1>
+      </div>
+      <div>
+        <a href="">Download Excursion (Coming Soon!)</a>
+        <p><video autoplay loop>
         <source src="resources/videos/excursion.mp4" type="video/mp4">
         Your browser does not support the video tag.
-      </video></p> -->
-      <h1>Your personal travel guide</h1>
-      <h2>Excursion remembers places you like, and recommends new points of
-      interest around you.</h2>
-      <img src="resources/images/camp.jpg" type="image/jpg">
-      <p><img src="resources/images/phone.png" type="image/png"></p>
-      <h1>Coming soon for iPhone</h1>
-      <a href="">Download Excursion (Coming Soon!)</a>
+        </video></p> -->
+        <h1>Your personal travel guide</h1>
+        <h2>Excursion remembers places you like, and recommends new points of
+          interest around you.</h2>
+        <img src="resources/images/camp.jpg" type="image/jpg">
+        <p><img src="resources/images/phone.png" type="image/png"></p>
+        <h1>Coming soon for iPhone</h1>
+        <a href="">Download Excursion (Coming Soon!)</a>
+      <div id="footer">
+        <h2>© Excursion</h2>
+      </div>
+
 </html>
